--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,19 +1,19 @@
-<?=$this->doctype();?>
+<?php
+$this->requireJs('module/MyApp');
+$this->doctype();
+?>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <?=$this->headTitle('Kapitchi ZF2 and AngularJS project template')->setSeparator(' - ')->setAutoEscape(false) ?>
-
         <?=$this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
             ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
         ?>
-
         <?=$this->headLink()->prependStylesheet($this->basePath() . '/build/css/global.css')?>
         <?=$this->headScript()?>
-        <?=$this->requireJs()?>
     </head>
-    <body>
+    <body id="MyApp">
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -31,19 +31,16 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
-                </div><!--/.nav-collapse -->
+                </div>
             </div>
         </div>
 
-        <div class="container">
-
-            <div class="starter-template">
-                <h1>Bootstrap starter template</h1>
-                <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-            </div>
-
-        </div><!-- /.container -->
+        <div class="container" ng-controller="welcomeController">
+            <h1>Welcome</h1>
+            <p>{{message}}</p>
+        </div>
 
         <?=$this->inlineScript() ?>
+        <?=$this->requireJs()?>
     </body>
 </html>
