example mysql data angular fetches from API

--- a/asset/sass/global.scss
+++ b/asset/sass/global.scss
@@ -2,6 +2,9 @@
 @import "../../public/vendor/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap";
 @import "../../public/vendor/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap/theme";
 
+//AngularJS
+@import "angular";
+
 body {
   padding-top: 50px;
 }
