--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,19 +1,19 @@
 <?php
-$this->requireJs('module/MyApp');
-$this->doctype();
+echo $this->doctype();
 ?>
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <?=$this->headTitle('Kapitchi ZF2 and AngularJS project template')->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?=$this->headTitle('ZF2 Apigility and AngularJS project template')->setSeparator(' - ')->setAutoEscape(false) ?>
         <?=$this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
             ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
         ?>
         <?=$this->headLink()->prependStylesheet($this->basePath() . '/build/css/global.css')?>
         <?=$this->headScript()?>
+        <?=$this->requireJs()?>
     </head>
-    <body id="MyApp">
+    <body>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -23,24 +23,18 @@ $this->doctype();
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Project name</a>
+                    <a class="navbar-brand" href="#">MyApp v0.1</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="container" ng-controller="welcomeController">
-            <h1>Welcome</h1>
-            <p>{{message}}</p>
-        </div>
+        <?=$this->content?>
 
         <?=$this->inlineScript() ?>
-        <?=$this->requireJs()?>
     </body>
 </html>
