--- a/asset/sass/global.scss
+++ b/asset/sass/global.scss
@@ -2,6 +2,9 @@
 @import "../../public/vendor/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap";
 @import "../../public/vendor/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap/theme";
 
+//Fontcustom - icon
+//@import "../../public/build/icon/icon";
+
 //AngularJS
 @import "angular";
 
