--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,10 +1,29 @@
 <?php
-$this->requireJs('module/MyApp');
+$this->ng('ng-app', 'MyApp');
 ?>
-<div ng-controller="demoController" class="container ng-cloak">
+<div id="ng-app" ng-controller="demoController" class="container ng-cloak">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">MyApp v0.1</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
     <h1>Well done!</h1>
     <p>
-        If you see contributors table below with some records below, all is good and you are good to start doing some real coding now!
+        If you see contributors table with some records below, you are good to start some real coding now!
     </p>
     <h2>Contributors</h2>
     <table class="table table-bordered table-hover">
