--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -3,38 +3,11 @@ echo $this->doctype();
 ?>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <?=$this->headTitle('ZF2 Apigility and AngularJS project template')->setSeparator(' - ')->setAutoEscape(false) ?>
-        <?=$this->headMeta()
-            ->appendName('viewport', 'width=device-width, initial-scale=1.0')
-            ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
-        ?>
-        <?=$this->headLink()->prependStylesheet($this->basePath() . '/build/css/global.css')?>
-        <?=$this->headScript()?>
-        <?=$this->requireJs()?>
+        <?=$this->render('layout/partial/head')?>
     </head>
     <body>
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">MyApp v0.1</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
         <?=$this->content?>
 
-        <?=$this->inlineScript() ?>
+        <?=$this->render('layout/partial/body-end')?>
     </body>
 </html>
